--- a/index.html
+++ b/index.html
@@ -1207,7 +1207,7 @@
                 <div class="credit-division2">
                     <strong>Client Contributors:</strong><br>
                     <ul>
-                        <li>carlton (1phased)</li>
+                        <li>phase (phasephasephase)</li>
                         <li>Plextora (plextora)</li>
                         <li>CreativeMC (creativemc)</li>
                         <li>soppy (soupier)</li>
