--- a/plugins/index.html
+++ b/plugins/index.html
@@ -19,7 +19,7 @@
     <meta property="og:image"
         content="https://cdn.discordapp.com/attachments/1059373077005336656/1059373077835812944/latite-1.png?ex=65c08e8f&is=65ae198f&hm=2071a81318b56e3cf2958b8ca44ddade4599ca10117658f2192e79db8e2af404&">
     <title>Plugins - Latite Client</title>
-    <link rel="icon" type="image/png" href="sources/favicon.png">
+    <link rel="icon" type="image/png" href="../sources/favicon.png">
     <link rel="stylesheet" href="./style.css">
     <link rel="stylesheet" href="../sources/aos_lib.css" />
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
