--- a/index.html
+++ b/index.html
@@ -600,7 +600,7 @@
                     <div id="faqp">
                         Latite Client currently supports:
                         <ul class="faqlist">
-                            <li>1.21.x</li>
+                            <li>1.21.2</li>
                             <li>1.20.8x</li>
                         </ul>
                     </div>
@@ -740,11 +740,13 @@
                             <li>Keystrokes</li>
                             <li>Motion Blur</li>
                             <li>Movable Bossbar</li>
+                            <li>Movable Coordinates</li>
                             <li>Movable Paperdoll</li>
                             <li>Movable Scoreboard</li>
                             <li>Nickname</li>
                             <li>Ping Display</li>
                             <li>Player List</li>
+                            <li>Position Display (displays your coordinates)</li>
                             <li>Reach Display</li>
                             <li>Server Display (displays the IP address of the server you're on)</li>
                             <li>Speed display</li>
@@ -754,7 +756,7 @@
                             <li>Zoom</li>
                         </ul>
                         <br>
-                        36 Total Mods
+                        37 Total Mods
                     </div>
                 </div>
 
