remove version thing

--- a/index.html
+++ b/index.html
@@ -1119,7 +1119,7 @@
                                 </a>
                                 <br>
 
-                                <p>Click below to import the latest version of Latite Client (1.20.81) into <a
+                                <p>Click below to import the latest version of Latite Client into <a
                                         href="https://github.com/JiayiSoftware/JiayiLauncher" target="_blank"
                                         class="links">Jiayi Launcher&nbsp;</a><i
                                         class="fa-solid fa-arrow-up-right-from-square"></i></p>
