faq mc version update

--- a/index.html
+++ b/index.html
@@ -598,10 +598,10 @@
                         <i class="fas fa-chevron-down d-arrow"></i>
                     </button>
                     <div id="faqp">
-                        Latite Client currently supports:
+                        The latest version of Latite Client currently supports:
                         <ul class="faqlist">
-                            <li>1.21.2</li>
-                            <li>1.20.8x</li>
+                            <li>1.21.21</li>
+                            <li>1.21.20</li>
                         </ul>
                     </div>
                 </div>
