website info updates

--- a/index.html
+++ b/index.html
@@ -71,11 +71,11 @@
             <ul>
                 <a onclick="toggleAlertDownlaodButton(); toggleDownload();">Downloads</a>
                 <a href="#faq">FAQ</a>
-                <a onclick="toggleBeta()">Beta</a>
+                <a onclick="toggleBeta()">Donate</a>
                 <a onclick="toggleLicense()">License</a>
                 <a href="#plugins">Plugins</a>
                 <a href="https://discord.gg/GpV3w5tyBs" target="_blank">Discord</a>
-                <a href="https://github.com/Imrglop/Latite-Releases" target="_blank">GitHub</a>
+                <a href="https://github.com/LatiteClient/Latite" target="_blank">GitHub</a>
             </ul>
         </nav>
     </div>
@@ -302,7 +302,7 @@
             <div class="l-desc-container" data-aos="fade" data-aos-easing="ease-in-out" id="trigger4">
                 <p class="l-section-header">Latite Client <span class="l-text-gradient">Launcher</span>
                 </p>
-                <p class="l-desc">Launch Latite Client with ease using our new and clean Launcher, which is coming soon!
+                <p class="l-desc">Launch Latite Client with ease using our new and clean Launcher!
                 </p>
             </div>
             <div class="l-gr" data-aos="fade-down" data-aos-easing="ease-out" data-aos-delay="200"
@@ -326,8 +326,8 @@
                         <i class="fas fa-chevron-down d-arrow"></i>
                     </button>
                     <div id="faqp">
-                        Latite Client is a legitimate DLL client for Minecraft Windows 10/11 Edition. This
-                        binary modifies your game and adds useful features for PVP and/or Survival!
+                        Latite Client is a non-cheat DLL modification for Minecraft Windows 10/11 Edition
+                        which has features ranging from PVP-related utilities to world utility/visual mods and a plugin system.
                     </div>
                 </div>
 
@@ -357,7 +357,7 @@
                             not
                             know how to inject the DLL using
                             whatever external injector you have, you can look for support in
-                            <code>#public-support</code>.
+                            <code>#community-support</code>.
                             Please do not open
                             a ticket for this as it is usually a simple process.
                         </p>
@@ -375,19 +375,12 @@
                     </button>
                     <div id="faqp">
                         <ul class="faqlist">
-                            <li><strong>Legacy Latite Injector</strong> - a very old version of the Latite Injector,
-                                only use this if you encounter issues with the current injector.</li>
-                            <li><strong>Latite Injector</strong> - this is the option most people choose, it's the
-                                default way to inject the client.</li>
-                            <li><strong>Latite Minimal</strong> - This is a simpler version of the main injector for
-                                users encountering antivirus issues or users in India as GitHub is blocked in that
-                                country and therefore only this version of the injector will work for them.</li>
-                            <li><strong>DLL Download</strong> - This is the client itself, only download this if you
-                                want to use it with other injectors (no you will not be able to use the client by
-                                opening the DLL itself)</li>
+                            <li><a href="https://github.com/Imrglop/Latite-Releases/raw/main/injector/Installer.exe" class="links" target="_blank"><strong>Latite Injector</strong></a> - this is the option most people choose, it's the default way to inject the client.</li>
+                            <li><a href="https://latite-client.is-from.space/r/Latite_Minimal.exe" class="links" target="_blank"><strong>Latite Minimal</strong></a> - This is a simpler version of the main injector for users encountering antivirus issues or users in India as GitHub is blocked in that country and therefore only this version of the injector will work for them.</li>
+                            <li><a href="https://github.com/Imrglop/Latite-Releases/releases/latest" class="links" target="_blank"><strong>DLL Download</strong></a> - This is the client itself, only download this if you want to use it with other injectors (no you will not be able to use the client by opening the DLL itself)</li>
                         </ul>
-                        <img src="./sources/faq-help-dl.webp" alt="Latite Client Bot Discord Message" loading="lazy"
-                            class="faq-help-dl">
+                        <!-- <img src="./sources/faq-help-dl.webp" alt="Latite Client Bot Discord Message" loading="lazy"
+                            class="faq-help-dl"> -->
                     </div>
                 </div>
 
@@ -638,13 +631,23 @@
                         <i class="fas fa-chevron-down d-arrow"></i>
                     </button>
                     <div id="faqp">
-                        If you boost our discord server or subscribe to <a href="https://www.patreon.com/latiteclient"
+                        <!-- If you boost our discord server or subscribe to <a href="https://www.patreon.com/latiteclient"
                             class="links">our patreon&nbsp;<i class="fa-solid fa-arrow-up-right-from-square"></i></a>,
                         you get access to all beta channels (<code>#beta-announcement</code>,
                         <code>#beta-releases</code>, <code>#beta-chat</code> and more). <code>#beta-releases</code>
                         contains DLLs for Latite
                         Client not released to the public yet. For example, it could contain a version
-                        of Latite Client that has some features that aren't released to the public yet.
+                        of Latite Client that has some features that aren't released to the public yet. -->
+                        Latite Client Beta are early versions of the client to test new features. These versions may be unstable
+                        and bugs can be encountered.
+                        <br><br>
+                        Beta versions are now available to everyone since the client's transition to FOSS, and can
+                        now be accessed in <code>#beta-releases</code> in our Discord Server.
+                        <br><br>
+                        Boosting our discord server or subscribing to <a href="https://www.patreon.com/latiteclient"
+                            class="links">our patreon&nbsp;<i class="fa-solid fa-arrow-up-right-from-square"></i></a>,
+                        will give you access to the beta chat. Let us know that you are testing beta releases and want
+                        to join beta chat. You can do this by making a ticket at <code>#open-a-ticket</code> or just pinging a staff member.
                     </div>
                 </div>
 
@@ -687,6 +690,7 @@
                                 absolute hell to manage.
                             </li>
                         </ul>
+                        <br>
                         <strong>Update: Atlas Client, made by the same developer is in the works for Android
                             Devices.</strong>
                         <br><br>
@@ -698,7 +702,7 @@
                                     <h3>Legitimate Client for MCPE</h3>
                                 </div>
                             </div>
-                            <a href="https://discord.gg/pRq73GPVGb" class="atlaslink">
+                            <a href="https://atlasclient.net/" target="_blank" class="atlaslink">
                                 <button class="atlasdownload">
                                     DOWNLOAD&nbsp;FOR&nbsp;<i class="fa-brands fa-android"></i>
                                 </button>
@@ -841,7 +845,7 @@
                     </button>
                     <div id="faqp">
                         You can report all bugs through the
-                        <code><img src="./sources/forum.webp" alt="EditHUD" width="17px">bugs</code>
+                        <code><img src="./sources/forum.webp" alt="EditHUD" width="17px">&nbsp;report-bugs</code>
                         forum channel in our discord server.
                     </div>
                 </div>
@@ -853,7 +857,7 @@
                     </button>
                     <div id="faqp">
                         You can post all suggestions in the
-                        <code><img src="./sources/forum.webp" alt="EditHUD" width="17px">suggestions</code>
+                        <code><img src="./sources/forum.webp" alt="EditHUD" width="17px">&nbsp;suggestions</code>
                         forum channel in our discord server.
                     </div>
                 </div>
@@ -865,7 +869,7 @@
                     </button>
                     <div id="faqp">
                         If your the solution to your problem isn't found in the FAQ, you can
-                        ask for help in <code>#public-support</code> or contact staff by opening a ticket in
+                        ask for help in <code>#community-support</code> or contact staff by opening a ticket in
                         <code>#open-a-ticket</code>.
                     </div>
                 </div>
@@ -903,6 +907,7 @@
                     <div id="faqp">
                         Here are all the GitHub Links:
                         <ul class="faqlist">
+                            <li><a href="https://github.com/LatiteClient/Latite" class="links" target="_blank">Latite Client V2 Repository&nbsp;<i class="fa-solid fa-arrow-up-right-from-square"></i></a></li>
                             <li><a href="https://github.com/Plextora/LatiteInjector" class="links" target="_blank">Latite Client Launcher&nbsp;<i class="fa-solid fa-arrow-up-right-from-square"></i></a></li>
                             <li><a href="https://github.com/LatiteScripting" class="links" target="_blank">Latite Client Plugins Repositories&nbsp;<i class="fa-solid fa-arrow-up-right-from-square"></i></a></li>
                             <li><a href="https://github.com/Imrglop/Latite-Releases" class="links" target="_blank">Latite Client Releases&nbsp;<i class="fa-solid fa-arrow-up-right-from-square"></i></a></li>
@@ -1176,19 +1181,15 @@
     <div class="overlay-container beta" onclick="closeBeta()">
         <div class="overlay-box beta">
             <div class="overlay-header beta">
-                <p>Beta Access</p>
+                <p>Donate</p>
                 <i class="bi bi-x-lg" onclick="closeBeta()"></i>
             </div>
             <div class="overlay-content beta">
                 <p>
-                    To gain access to work in progress beta features, you need to either boost our Discord Server or
-                    subscribe to our Patreon
+                    If you'd like to support the development of Latite Client, or want to
+                    gain access to beta chat, you may subscribe to our Patreon
                     <a class="links" target="_blank" href="https://www.patreon.com/latiteclient">here&nbsp;<i
                             class="fa-solid fa-arrow-up-right-from-square"></i></a>.
-                    You must join our
-                    <a class="links" target="_blank" href="https://discord.gg/GpV3w5tyBs">Discord&nbsp;Server&nbsp;<i
-                            class="fa-solid fa-arrow-up-right-from-square"></i></a>
-                    to receive your rewards.
                 </p>
             </div>
         </div>
@@ -1204,7 +1205,7 @@
             <div class="overlay-content credit">
                 <div class="credit-division1">
                     <p><strong>Client Developer:</strong><br>Imrglop (jayrsky)</p>
-                    <p><strong>Launcher Developer:</strong><br>Plextora (plextora)<br>CreativeMC (creativemc)</p>
+                    <p><strong>Launcher Developer:</strong><br>Plextora (plextora)</p>
                     <p><strong>Website Developer:</strong><br>CreativeMC (creativemc)</p>
                 </div>
                 <div class="credit-division2">
