revert from iframe to vid

--- a/index.html
+++ b/index.html
@@ -209,15 +209,15 @@
                 data-aos-delay="200" data-aos-anchor="#trigger3">
             <img src="sources/light.svg" class="light-circle" data-aos="fade-down" data-aos-easing="ease-out"
                 data-aos-delay="200" data-aos-anchor="#trigger3">
-            <!-- <video controls class="trailer" data-aos="fade-down" data-aos-easing="ease-out" data-aos-delay="200"
+            <video controls class="trailer" data-aos="fade-down" data-aos-easing="ease-out" data-aos-delay="200"
                 data-aos-anchor="#trigger3">
                 <source src="./sources/FinalRenderLatiteClientTrailer.mp4" type="video/mp4">
-            </video> -->
-            <iframe class="trailer" src="https://www.youtube.com/embed/xSOfTsFKixY"
+            </video>
+            <!-- <iframe class="trailer" src="https://www.youtube.com/embed/xSOfTsFKixY"
                 title="Latite Client V2 TRAILER (Minecraft Windows 10/11)" frameborder="0"
                 allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
                 referrerpolicy="strict-origin-when-cross-origin" data-aos="fade-down" data-aos-easing="ease-out"
-                data-aos-delay="200" data-aos-anchor="#trigger3" allowfullscreen></iframe>
+                data-aos-delay="200" data-aos-anchor="#trigger3" allowfullscreen></iframe> -->
         </section>
 
 
